--- a/index.html.erb
+++ b/index.html.erb
@@ -34,13 +34,13 @@
       <div class="row">
         <div class="col-xs-6">
           <ul>
-            <li>
-              <a href="https://youtu.be/btDyfdLk9go">Comp Planning Review Session January 23, 2019</a>
-            </li>
 
-            <li>
-              <a href="https://youtu.be/ZwWh7a0SKRM">Comp Planning Review Session January 30, 2019</a>
-            </li>
+            <% videos.each do |video| %>
+              <li>
+                <a href="<%= video.link %>"><%= video.name %></a>
+              </li>
+            <% end %>
+
           </ul>
         </div>
 
