--- a/index.html.erb
+++ b/index.html.erb
@@ -27,6 +27,7 @@
     <div class="container">
       <div class="col-xs-12">
         <div class="row">
+          <img src="images/header.jpg" height="256" width="1024" alt="Schoen Place with frozen Canal in winter 2019">
           <h1>Video Recordings of Pittsford Village Government Events</h1>
         </div>
       </div>
@@ -45,7 +46,15 @@
         </div>
 
         <div class="col-xs-6">
-          <p>We are a grassroots group that is publishing media covering government events in Pittsford Village in a non-partisan way. Our mission is to help citizens in Pittsford Village to become more educated and engaged with their government.</p>
+          <p>We are a grassroots, non-partisan group that is helping to make digital media available online, covering government events in Pittsford Village. Our mission is to help citizens in Pittsford Village to become more educated and engaged with their government, and more unified as neighbors in supporting our wonderful village.</p>
+
+          <p>Our aim is not to cover every single event, but we'll cover the ones that we do attend with the right equipment on hand. Long-term, we hope that the village government takes over this initiative so that coverage is more consistent.</p>
+
+          <p>Have a link to a recording of an event that you want to share, have questions, or want to help us? Email <a href="mailto:justin@phq.org">justin@phq.org</a>.</p>
+
+          <p>Ready to jump in and add a link, or modify this web site? Head over to the <a href="https://github.com/jsl/village-video">source code</a>.</p>
+
+          <p>Thanks for stopping by!</p>
         </div>
       </div>
     </div>
