Make header image scale automatically

--- a/index.html.erb
+++ b/index.html.erb
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/local.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,10 +26,10 @@
     <script src="js/bootstrap.min.js"></script>
 
     <div class="container">
-      <div class="col-xs-12">
-        <div class="row">
-          <img src="images/header.jpg" height="256" width="1024" alt="Schoen Place with frozen Canal in winter 2019">
-          <h1>Video Recordings of Pittsford Village Government Events</h1>
+      <div class="row">
+        <div class="col-xs-12">
+          <img class="header" src="images/header.jpg" height="256" width="1024" alt="Schoen Place with frozen Canal in winter 2019" />
+          <h1>Pittsford Village Videos: Grassroots Videos of Government Events</h1>
         </div>
       </div>
 
