--- a/index.html.erb
+++ b/index.html.erb
@@ -53,7 +53,7 @@
 
           <p>Have a link to a recording of an event that you want to share, have questions, or want to help us? Email <a href="mailto:justin@phq.org">justin@phq.org</a>.</p>
 
-          <p>Ready to jump in and add a link, or modify this web site? Head over to the <a href="https://github.com/jsl/village-video">source code</a>.</p>
+          <p>Ready to jump in and add a link, or modify this web site? Head over to the <a href="https://github.com/jsl/village-videos">source code</a>.</p>
 
           <p>Thanks for stopping by!</p>
         </div>
