--- a/index.html.erb
+++ b/index.html.erb
@@ -7,9 +7,14 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Pittsford Village Government Videos</title>
 
+    <meta name="description" content="Pittsford Village Videos is a grassroots, non-partisan group that is helping to make digital media available online covering government events in Pittsford Village, NY.">
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/local.css" rel="stylesheet">
+
+    <meta property="og:image" content="images/header-og-image.jpg"/>
+    <meta property="og:description" content="Pittsford Village Videos is a grassroots, non-partisan group that is helping to make digital media available online covering government events in the village."/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
