--- a/index.html.erb
+++ b/index.html.erb
@@ -16,6 +16,17 @@
     <meta property="og:image" content="images/header-og-image.jpg"/>
     <meta property="og:description" content="Pittsford Village Videos is a grassroots, non-partisan group that is helping to make digital media available online covering government events in the village."/>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9779686-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-9779686-3');
+    </script>
+
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
